--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ image: archlinux:latest
 pages:
   stage: deploy
   script:
-    - pacman -S --noconfirm kotlin
-    - ./scripts/ci.main.kts --highlight "Highlights - Demo" --targetDir "pages" --targetUrl "http://127.0.0.1:8000/"
+    - pacman -Syu --noconfirm kotlin
+    - ./scripts/ci.main.kts --highlight "Highlights - Demo" --targetDir "pages" --targetUrl "https://kirchewds.gitlab.io/kirchenfuehrung-data/"
   artifacts:
     paths:
       - public
