--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,6 +33,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Install Java
+        uses: sdkman/sdkman-action@main
+        id: sdkman
+        with:
+          candidate: java
+          version: 21.0.4-tem
       - name: Install Kotlin
         uses: sdkman/sdkman-action@main
         id: sdkman
