--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,18 +33,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Install Java
-        uses: sdkman/sdkman-action@main
-        with:
-          candidate: java
-          version: 21.0.4-tem
-      - name: Install Kotlin
-        uses: sdkman/sdkman-action@main
-        with:
-          candidate: kotlin
-          version: 2.0.20
       - name: Generate Artifact
-        run: kotlinc -script ./scripts/ci.main.kts -- --highlight "Kirchenführung" --targetDir "public" --targetUrl "https://kirchewds.gitlab.io/kirchenfuehrung-data/"
+        run: ./scripts/ci.main.kts --highlight "Kirchenführung" --targetDir "public" --targetUrl "https://kirchewds.gitlab.io/kirchenfuehrung-data/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
