--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,15 +1,11 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["master"]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
@@ -22,7 +18,6 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -32,8 +27,7 @@ jobs:
       image: archlinux:latest
     steps:
       - name: Install dependencies
-        run: |
-          pacman -Syu --noconfirm git git-lfs kotlin
+        run: pacman -Syu --noconfirm git git-lfs kotlin
       - name: Checkout
         uses: actions/checkout@v4
         with:
